<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ic_input_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_converter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_value"
        app:layout_constraintBottom_toBottomOf="@+id/input_value"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_value"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/value_in_meter"
        app:layout_constraintStart_toEndOf="@+id/ic_input_value"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/value_entered_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ic_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic__question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_question"
        app:layout_constraintBottom_toBottomOf="@+id/text_question"/>

    <TextView
        android:id="@+id/text_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/question_text"
        app:layout_constraintStart_toEndOf="@+id/ic_question"
        app:layout_constraintTop_toBottomOf="@+id/input_value" />

    <RadioGroup
        android:id="@+id/checked_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:checkedButton="@id/check_mile"
        app:layout_constraintStart_toStartOf="@+id/text_question"
        app:layout_constraintTop_toBottomOf="@+id/text_question">

        <RadioButton
            android:id="@+id/check_mile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mile" />

        <RadioButton
            android:id="@+id/check_inch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inch" />
        <RadioButton
            android:id="@+id/check_sea_mile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sea_mile" />
        <RadioButton
            android:id="@+id/check_ft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fut" />

        <RadioButton
            android:id="@+id/check_yard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yard" />
        <RadioButton
            android:id="@+id/check_kilometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilometer" />

        <RadioButton
            android:id="@+id/check_centimeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centimeter" />

        <RadioButton
            android:id="@+id/check_millimeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/millimeter" />
    </RadioGroup>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/checked_value"
        app:layout_constraintStart_toStartOf="@+id/checked_value"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="Результат: 10 м = 100 mile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calculate"/>

</androidx.constraintlayout.widget.ConstraintLayout>
